adding add feature

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("MyLibraryApp", props: @book_props, prerender: false) %>
+<%= react_component("MyLibraryApp", props: {books: @book_props}, prerender: false) %>
